<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Model selection category -->
    <PreferenceCategory
        android:title="@string/pref_category_model"
        app:iconSpaceReserved="false">

        <Preference
            android:key="pick_model"
            android:title="@string/pref_model_path_title"
            android:summary="@string/no_model_selected"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <!-- Audio focus category -->
    <PreferenceCategory
        android:title="@string/pref_category_audio"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            android:key="audio_focus_enabled"
            android:title="@string/pref_audio_focus_title"
            android:summary="@string/pref_audio_focus_summary"
            android:defaultValue="true"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:key="audio_duck_only"
            android:title="@string/pref_audio_duck_title"
            android:summary="@string/pref_audio_duck_summary"
            android:defaultValue="true"
            android:dependency="audio_focus_enabled"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <!-- Matching category -->
    <PreferenceCategory
        android:title="@string/pref_category_matching"
        app:iconSpaceReserved="false">

        <SeekBarPreference
            android:key="match_threshold"
            android:title="@string/pref_match_threshold_title"
            android:summary="@string/pref_match_threshold_summary"
            android:defaultValue="60"
            android:min="30"
            android:max="95"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>
